fix: add env templating for extra env variables rendering in deployment

--- a/charts/metaflow/charts/metaflow-service/templates/deployment.yaml
+++ b/charts/metaflow/charts/metaflow-service/templates/deployment.yaml
@@ -67,6 +67,10 @@ spec:
           {{- end }}
           env:
             {{- include "metaflow-service.metadatadbEnvVars" . | nindent 12 }}
+            {{- range .Values.uiBackend.env }}
+            - name: {{ .name | quote }}
+              value: {{ .value | quote }}
+            {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
