fix: reference env from correct values key

--- a/charts/metaflow/charts/metaflow-service/templates/deployment.yaml
+++ b/charts/metaflow/charts/metaflow-service/templates/deployment.yaml
@@ -67,7 +67,7 @@ spec:
           {{- end }}
           env:
             {{- include "metaflow-service.metadatadbEnvVars" . | nindent 12 }}
-            {{- range .Values.uiBackend.env }}
+            {{- range .Values.env }}
             - name: {{ .name | quote }}
               value: {{ .value | quote }}
             {{- end }}
