feat: add capability to mount volumes in backendui

--- a/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
+++ b/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
@@ -76,6 +76,14 @@ spec:
             {{- include "metaflow-ui.metadatadbEnvVars" . | nindent 12 }}
           resources:
             {{- toYaml .Values.uiBackend.resources | nindent 12 }}
+          {{- with .Values.uiBackend.volumeMounts }}
+          volumeMounts:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+      {{- with .Values.uiBackend.volumes }}
+      volumes:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
