--- a/charts/metaflow/charts/metaflow-ui/values.yaml
+++ b/charts/metaflow/charts/metaflow-ui/values.yaml
@@ -31,6 +31,16 @@ uiBackend:
     # requests:
     #   cpu: 100m
     #   memory: 128Mi
+  
+  volumes: []
+  # volumes:
+  #   - name: x
+  #     secret:
+  #       name: x
+  volumeMounts: []
+  # volumeMounts:
+  #   - mountPath: /x
+  #     name: x
 
   service:
     type: ClusterIP
