--- a/.github/workflows/publish_helm_charts.yml
+++ b/.github/workflows/publish_helm_charts.yml
@@ -26,9 +26,23 @@ jobs:
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
-    - name: Run chart-releaser
-      uses: helm/chart-releaser-action@v1.6.0
+    - name: Release sub charts
+      uses: helm/chart-releaser-action@v1.7.0
       with:
         charts_dir: charts/metaflow/charts
+        skip_existing: true
+      env:
+        CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+
+    - name: add bitnami repo
+      run: |
+        helm repo add bitnami https://charts.bitnami.com/bitnami
+        helm repo update
+
+    - name: Release main chart
+      uses: helm/chart-releaser-action@v1.7.0
+      with:
+        charts_dir: charts/
+        skip_existing: true
       env:
         CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
