chart: specify init container resources
Some kubernetes clusters require resources being set up for all containers, including init containers.

--- a/charts/metaflow/charts/metaflow-service/templates/deployment.yaml
+++ b/charts/metaflow/charts/metaflow-service/templates/deployment.yaml
@@ -42,6 +42,8 @@ spec:
             {{- with .Values.env }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
