chart: enable selecting datastore type

--- a/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
+++ b/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
@@ -70,7 +70,7 @@ spec:
             - name: METAFLOW_SERVICE_URL
               value: {{ .Values.uiBackend.metaflowServiceURL | quote }}
             - name: METAFLOW_DEFAULT_DATASTORE
-              value: "s3"
+              value: {{ .Values.uiBackend.metaflowDefaultDatastore | quote }}
             - name: METAFLOW_DEFAULT_METADATA
               value: "service"
             {{- include "metaflow-ui.metadatadbEnvVars" . | nindent 12 }}
