--- a/charts/metaflow/charts/metaflow-ui/values.yaml
+++ b/charts/metaflow/charts/metaflow-ui/values.yaml
@@ -38,6 +38,8 @@ uiBackend:
 
   replicaCount: 1
 
+  metaflowDefaultDatastore: "s3"
+
   metaflowDatastoreSysRootS3: ""
     # The root S3 bucket prefix that will be used by metaflow
 
