--- a/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
+++ b/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
@@ -49,10 +49,9 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           env:
-            {{- range .Values.uiBackend.env }}
-            - name: {{ .name | quote }}
-              value: {{ .value | quote }}
-            {{- end }}
+          {{- with .Values.uiBackend.env }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
             - name: UI_ENABLED
               value: "1"
             - name: PATH_PREFIX
