--- a/charts/metaflow/charts/metaflow-ui/values.yaml
+++ b/charts/metaflow/charts/metaflow-ui/values.yaml
@@ -13,6 +13,14 @@ uiBackend:
     - name: MF_METADATA_DB_SSL_MODE
       value: prefer
 
+    # It's possible to define a configMap or secret to load environment variables:
+    # - name: AWS_ACCESS_KEY_ID
+    #  valueFrom:
+    #    secretKeyRef:
+    #      name: metaflow-aws-credentials
+    #      key: access_key_id
+
+
   envFrom: []
     # Example of loading environment variables from a ConfigMap and Secret:
     # - configMapRef:
