--- a/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
+++ b/charts/metaflow/charts/metaflow-ui/templates/backend_deployment.yaml
@@ -49,10 +49,9 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           env:
-            {{- range .Values.uiBackend.env }}
-            - name: {{ .name | quote }}
-              value: {{ .value | quote }}
-            {{- end }}
+          {{- with .Values.uiBackend.env }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
             - name: UI_ENABLED
               value: "1"
             - name: PATH_PREFIX
@@ -70,7 +69,7 @@ spec:
             - name: METAFLOW_SERVICE_URL
               value: {{ .Values.uiBackend.metaflowServiceURL | quote }}
             - name: METAFLOW_DEFAULT_DATASTORE
-              value: "s3"
+              value: {{ .Values.uiBackend.metaflowDefaultDatastore | quote }}
             - name: METAFLOW_DEFAULT_METADATA
               value: "service"
             {{- include "metaflow-ui.metadatadbEnvVars" . | nindent 12 }}
