--- a/charts/metaflow/charts/metaflow-ui/templates/static_service.yaml
+++ b/charts/metaflow/charts/metaflow-ui/templates/static_service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ include "metaflow-ui.fullname-static" . }}"
-  namespace: {{ .Values.namespace | default "default" }}
+  namespace: {{ .Values.namespace }}
   labels:
     {{- include "metaflow-ui.labelsStatic" . | nindent 4 }}
 spec:
